--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>API POKEMON</title>
-    <link rel="stylesheet" href="css/estilo.css">
-</head>
-<body onload="chama()">
-    
+    <link rel="stylesheet" href="css/estilo.css" />
+  </head>
+  <body onload="chama()">
     <h1>API DOS 151 POKEMONS DE KANTO</h1>
-    <div class="conteudo">
-
-    </div>
+    <div class="conteudo"></div>
 
     <script src="js/scrip.js"></script>
-
-</body>
+  </body>
 </html>
